# aethos-ps

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.hostinger.registry.yml  docker-compose.hostinger.yml  start-prod.sh  start.sh  stop-prod.sh  stop.sh
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: accounting_guardian.py  accrual_agent.py  base.py  bill_pay_agent.py  collections_agent.py  engagement_letter_agent.py  expense_extractor_agent.py  fx_remeasurement_agent.py  intelligence_agent.py  invoice_drafter_agent.py  prepaid_amortization_agent.py  project_health_agent.py  recurring_journal_agent.py  reporting_agent.py  revenue_recognition_agent.py  schemas.py  suggestion_writer.py  time_entry_agent.py  tool_registry.py  vendor_invoice_agent.py
backend/app/core/: auth.py  config.py  db.py  employee.py  finance_personas.py  logging.py  permissions.py  rate_limit.py  rbac.py  stripe_deps.py  tenant.py
backend/app/domain/: currency.py  exceptions.py  fx.py  journal_helper.py  money.py  payment_optimization.py  pii.py  tax_id_validator.py
backend/app/evals/: __init__.py  golden_prompts.py  rubric.py  runner.py
backend/app/models/: accounting.py  accounts.py  agents.py  ai_settings.py  approval_policy.py  assignments.py  auth.py  billing_runs.py  bills.py  client_groups.py  clients.py  collections_policy.py  documents.py  employees.py  engagements.py  expenses.py  financial_events.py  inbox.py  integrations.py  invoices.py  localization.py  procurement.py  projects.py  rate_cards.py  reports.py  security.py  service_catalogue.py  tax_rates.py  tenant_users.py  time_entries.py  timesheet.py  webhook_events.py
backend/app/repositories/: assignments_repo.py  billing_runs_repo.py  bills_repo.py  chat_repo.py  clients_repo.py  employees_repo.py  engagements_repo.py  inbox_repo.py  invoices_repo.py  procurement_repo.py  projects_repo.py  rate_cards_repo.py  tenant_repo.py  time_entries_repo.py
backend/app/services/: _validation.py  accounts_service.py  agent_circuit_breaker.py  agent_run_ledger.py  agent_tool_policy.py  agents_service.py  ai_settings_service.py  approval_policy.py  approval_policy_settings_service.py  assignments_service.py  atlas_context.py  atlas_deterministic_responses.py  atlas_read_packs.py  atlas_runtime.py  atlas_semantic_intent_router.py  automation_schedules_service.py  bill_payments_service.py  bills_service.py  circuit_breaker.py  client_groups_service.py  clients_service.py  close_override_service.py  close_package_service.py  close_reconciliation_service.py  close_status_service.py  close_tasks_service.py  collections_policy_service.py  employees_service.py  engagements_service.py  expenses_service.py  financial_events_service.py  fx_gain_loss_service.py  fx_rate_service.py  hermes_client.py  inbox_service.py  integrations_service.py  invoices_service.py  localization_service.py  manual_journal_service.py  number_fidelity.py  (+24 more)
backend/app/workers/: arq_settings.py  autonomy_promoter.py  billing_run_worker.py  close_scheduler_worker.py  collections.py  document_extraction.py  finance_ops_manager_worker.py  fx_refresh.py  intelligence_worker.py  procrastinate_app.py  project_health_worker.py  stripe_reconcile_worker.py  time_entry_reminder_worker.py  workflow_runs.py
backend/scripts/: apply_migrations.py  audit_journal_integrity.py  reset_operational_data.py  seed_demo.py  seed_demo_v2.py  seed_master_config.py
backend/supabase/: seed.sql
backend/supabase/.temp/: linked-project.json  pooler-url  project-ref
backend/supabase/migrations/: 0001_tenants_auth.sql  0002_chart_of_accounts.sql  0003_journal.sql  0004_fx_rates_tax_rates.sql  0005_documents_ai_hitl.sql  0006_engagements_rate_cards.sql  0007_projects_time_expenses.sql  0008_ar_invoices.sql  0009_chat.sql  0010_ap_bills.sql  0011_project_phases.sql  0012_payments.sql  0013_bill_payments.sql  0014_indexes.sql  0015_security_hardening.sql  0016_storage_documents_bucket.sql  0017_storage_documents_rls_helper.sql  0018_procrastinate_schema.sql  0019_source_document_links.sql  0020_tenant_users_self_read.sql  0021_timesheet_portal.sql  0022_security_rls_hardening.sql  0027_time_entry_timezone.sql  0028_billing_arrangement_mixed.sql  0029_contacts_kind_both.sql  0030_agent_autonomy_settings.sql  0031_engagement_service_line.sql  0032_engagement_summary.sql  0033_service_catalogue.sql  0034_agent_operating_model.sql  0035_agent_kill_switches.sql  0036_agent_eval_candidates.sql  0037_agent_l3_promotion_gates.sql  0038_client_groups.sql  0039_financial_event_log.sql  0040_bill_payment_integrity_controls.sql  0041_accounts_authenticated_rls.sql  0042_tax_rates_authenticated_read_rls.sql  0043_service_catalogue_authenticated_read_rls.sql  0044_client_groups_authenticated_read_rls.sql  (+66 more)
backend/tests/: README.md  conftest.py
backend/tests/api/: __init__.py  conftest.py  test_agents_engagement_letter.py  test_agents_expense.py  test_agents_vendor_invoice.py  test_bill_payments.py  test_bills.py  test_copilot_chat.py  test_documents.py  test_engagement_summary.py  test_engagements_crud.py  test_finance_ops_ar_approval.py  test_fx.py  test_inbox.py  test_invoice_drafter.py  test_invoice_send.py  test_invoices.py  test_llm_fallback_chain.py  test_manual_journal.py  test_multi_tenant_isolation.py  test_payment_webhook.py  test_period_lock.py  test_public_invoice.py  test_rate_cards.py  test_rbac_matrix.py  test_reports.py  test_service_catalogue.py  test_signup_and_billing.py  test_smoke.py  test_storage_rls.py  test_stripe_connect.py  test_stripe_webhook_signature.py  test_tax_rates.py  test_tenant_membership_check.py  test_time_entries.py
backend/tests/e2e/: test_engagement_to_cash.py
backend/tests/eval/: test_agent_eval_live.py
backend/tests/evals/: test_engagement_letter_agent.py
backend/tests/fixtures/: README.md  __init__.py  scenarios.py
backend/tests/property/: test_journal_balance.py  test_money_precision.py
backend/tests/unit/: test_accounting_api_contract.py  test_accounting_guardian.py  test_accounts_api.py  test_chat.py  (+153 more)
(+439 files in other folders)
