[project]
name = "aethos-ps-backend"
version = "0.1.0-pre"
description = "Aethos for Professional Services — backend (FastAPI + PydanticAI + Supabase)."
requires-python = ">=3.12"
readme = "../README.md"

# Dependencies will be added as features ship.
# Anchored test/lint deps below so the skeleton suite is runnable from day one.
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "httpx>=0.27",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--tb=short",
]
markers = [
  "unit: fast, no I/O",
  "integration: real DB / real services",
  "e2e: full stack",
  "property: Hypothesis property tests",
  "eval: agent evaluation suite",
  "security: auth / RBAC / tenant-isolation tests",
  "slow: takes more than 5 seconds",
]
xfail_strict = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]
