[project]
name = "aethos-ps-backend"
version = "0.1.0-pre"
description = "Aethos for Professional Services — backend (FastAPI + PydanticAI + Supabase)."
requires-python = ">=3.12"
readme = { text = "Aethos PS backend service.", content-type = "text/plain" }

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic[email]>=2.7",
  "pydantic-settings>=2.3",
  "supabase>=2.5",
  "python-jose[cryptography]>=3.3",
  "python-json-logger>=2.0",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "anthropic>=0.30",
  "openai>=1.50",
  "stripe>=10.0",
  # Procrastinate — Postgres-backed task queue. Replaces ARQ (Redis-backed) so
  # the queue lives in Supabase, eliminating Redis as a dependency. See #108.
  "procrastinate>=3.0",
  "psycopg[binary,pool]>=3.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "hypothesis>=6.100",
  "httpx>=0.27",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--tb=short",
]
markers = [
  "unit: fast, no I/O",
  "integration: real DB / real services",
  "e2e: full stack",
  "property: Hypothesis property tests",
  "eval: agent evaluation suite",
  "security: auth / RBAC / tenant-isolation tests",
  "slow: takes more than 5 seconds",
  # Aksha QA suite — pilot-readiness regression
  "api: hits running API on :8011 against real Supabase",
  "smoke: minimal sanity tests; run first",
  "flow_signup: signup + trial",
  "flow_engagement: engagement lifecycle",
  "flow_billing: invoice drafting + send",
  "flow_payments: payment receive / bill pay",
  "flow_hitl: agent suggestions + inbox",
  "flow_reports: read-side report endpoints",
  "flow_accounting: journals / period lock",
  "flow_copilot: chat + tool calls",
  "rbac: RBAC matrix",
  "multi_tenant: cross-tenant isolation",
  "multi_currency: USD/GBP/SGD/INR/AUD",
  "unhappy: failure/error paths",
  "injection: prompt-injection / sanitisation",
  "concurrency: race / idempotency",
  "requires_stripe: needs Stripe sandbox keys",
  "requires_supabase: needs Supabase project keys",
  "requires_openrouter: spends LLM budget",
]
xfail_strict = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
]
